footer spacing fix

--- a/src/scss/all.sass
+++ b/src/scss/all.sass
@@ -74,9 +74,6 @@ $black: #2b2523
   width: 1.5rem
   height: 1.5rem
   fill: currentColor
-footer.footer
-  padding: 3rem 0rem 0rem
-  background-color: transparent
 
 //Menu overrides
 $menu-item-color: $text-primary
